--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.2.13",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "web-push": "^3.3.2"
   }
 }
